welder id editable on both certificates and cards and update the iqama label

--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -67,6 +67,7 @@
       <tr>
         <td style="border: 1px solid black; font-weight: bold;">Welder's/Welder Operator's Name</td>
         <td style="border: 1px solid black;"><input type="text" name="welderName" value="<%= record.welderName %>" id=""></td>
+      
         <td style="border: 1px solid black;font-weight: bold;">Identification of WPS/PQR</td>
         <td style="border: 1px solid black;"><input type="text" name="identification_wps" value="<%= record.identification_wps %>" id=""></td>
       </tr>
@@ -75,7 +76,10 @@
         <td style="border: 1px solid black;"><input type="text" value="<%=record.iqamaNo%>" name="iqamaNo" id=""></td>
         <td style="border: 1px solid black;font-weight: bold;">Qualification Standard</td>
         <td style="border: 1px solid black;"><input type="text" value="<%=record.qualifcationStandard %>"name="qualifcationStandard" id=""></td>
+      
       </tr>
+      <td style="border: 1px solid black; font-weight: bold;">Welder Id No</td>
+      <td style="border: 1px solid black;"><input type="text" name="welderId" value="<%= record.welderId %>" id=""></td>
       <tr>
         
         <td style="border: 1px solid black;font-weight: bold;">Base Metal Specification</td>
