--- a/views/insertCard.ejs
+++ b/views/insertCard.ejs
@@ -48,10 +48,10 @@
             <td>Iqama No</td>
             <td>:<input type="text" name="iqama_no" id=""></td>
           </tr>
-          <!-- <tr>
+          <tr>
               <td>Welder ID</td>
-              <td>: AT-02</td>
-            </tr> -->
+              <td>: <input type="text" name="welder_id" id=""></td>
+            </tr>
           <!-- <tr>
               <td>Card No</td>
               <td>: CAL-2023-1213</td>
