--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -66,6 +66,7 @@
         <td style="border: 1px solid black;"><input type="text" name="welderName" id=""></td>
         <td style="border: 1px solid black;font-weight: bold;">Identification of WPS/PQR</td>
         <td style="border: 1px solid black;"><input type="text" name="identification_wps" id=""></td>
+      
       </tr>
       <tr>
         <td style="border: 1px solid black;font-weight: bold;">Iqama / ID No</td>
@@ -74,12 +75,15 @@
         <td style="border: 1px solid black;"><input type="text" name="qualifcationStandard" id=""></td>
       </tr>
       <tr>
-        <!-- <td style="border: 1px solid black;font-weight: bold;">Welder ID No</td>
-        <td style="border: 1px solid black;"><input type="text" name="welderId" id=""></td> -->
+       
         <td style="border: 1px solid black;font-weight: bold;">Base Metal Specification</td>
         <td style="border: 1px solid black;"><input type="text" name="baseMetalSpecs" id=""></td>
         <td style="border: 1px solid black;font-weight: bold;">Weld Type</td>
         <td style="border: 1px solid black;"><input type="text" name="weldType" id=""></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;font-weight: bold;">Welder ID No</td>
+        <td style="border: 1px solid black;"><input type="text" name="welderId" id=""></td>
       </tr>
       <tr>
         <!-- <td style="border: 1px solid black;font-weight: bold;">Certificate Ref No</td>
