--- a/views/viewCard.ejs
+++ b/views/viewCard.ejs
@@ -39,7 +39,7 @@
 							<td><%= record.welder_name %></td>
 						</tr>
 						<tr>
-							<td>Iqama No:</td>
+							<td>Iqama/Id No:</td>
 							<td><%= record.iqama_no %></td>
 						</tr>
 						<tr>
