--- a/views/editCard.ejs
+++ b/views/editCard.ejs
@@ -10,7 +10,7 @@
 	<body style="width: 216mm; height: 279mm; margin: auto">
 		<form
 			action="/card/update/<%= record.card_no %>"
-			method="post"
+			method="POST"
 			enctype="multipart/form-data">
 			<div class="card">
 				<div class="flex-between">
@@ -80,12 +80,22 @@
 								</td>
 							</tr>
 							<tr>
-								<td>Iqama No</td>
+								<td>Iqama/Id No:</td>
 								<td>
 									:<input
 										type="text"
 										name="iqama_no"
 										value="<%=record.iqama_no  %>"
+										id="" />
+								</td>
+							</tr>
+							<tr>
+								<td>Welder ID</td>
+								<td>
+									:<input 
+										type="text"
+										name="welder_id"
+										value="<%=record.welder_id %>"
 										id="" />
 								</td>
 							</tr>
