remove “Radiography”  from ATECO welder certificate format

--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -217,7 +217,7 @@ h6{font-size: 11px;}
         <td>
           <div style="display: flex; flex-direction: column; gap: 5px; justify-content: center;">
             <h4>Visual Inspection</h4>
-            <h4>NDT - Radiography</h4>
+            <h4>NDT</h4>
             <h4>Mechanical Test</h4>
           </div>
        
