--- a/views/viewOperator.ejs
+++ b/views/viewOperator.ejs
@@ -409,10 +409,9 @@
       <thead>
         <tr>
           <th colspan="4">
-            <p style="font-size: 11px;">We, the undersigned, certify that the statements in the record are correct and
-              that the test coupons were welded and tested in accordance with the requirements of <span
+            <p style="font-size: 11px;">We certify that the statements in this record are correct and that the test coupons were prepared, welded and tested in accordance with the requirements of <span
                 style="color: rgb(0, 131, 254); font-weight: bold;">
-                <%= (new Date().getFullYear()) %>
+                <%= record.lawName %>
               </span>.</p>
           </th>
         </tr>
