--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -37,7 +37,7 @@ h6{font-size: 11px;}
         </div>
       </th>
       <th>
-        <!-- <img style="width:150px" src="/certificates/<%= record.certificateNo %>/profile.jpg" alt=""> -->
+        <!-- <img style="width:150px" src="/certificates/<%= record.certificateNo %>/profile.jpg" alt=cert""> -->
       <img 
   src="<%= record.profilePic %>" 
   alt="Profile for <%= record.certificateNo %>" 
